--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body {
 	font-family: sans-serif;
-	background-image: url(/src/assets/background_cv.png);
+	background-image: url(./assets/background_cv.png);
 	background-size: cover;
 }
 
