--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body {
 	font-family: sans-serif;
-	background-image: url(./assets/background_cv.png);
+	background-image: url(https://peepi.blob.core.windows.net/storage/365/admin/mnUivnTzMGtUAD8sQS5qOVYW5ggkUXHEi4KjatxD.png);
 	background-size: cover;
 }
 
